  - java.lang.ReflextiveOperationException
  - java.lang.BootStrapMethodError
  - java.lang.ExceptionInInitializerError
  - java.lang.IllegalAccessError
  - java.lang.annotation.AnnotationTypeMismatchException
  - java.lang.annotation.IncompleteAnnotationException
  - java.lang.annotation.AnnotationFormatError
  - java.util.Optional
  - java.lang.constant.Constable
  - java.lang.Enum
* VampireApi 0.10.0
  - outsource 3rd party types
  - some litte Java 15 extensions from release notes
  - litte more refactoring
  - java.io.UncheckedIOException
  - java.net.spi.*
  - java.net.UnknownServiceException
  - java.net.SocketTimeoutException
  - java.net.ProtocolException
  - java.net.PortUnreachableException
  - java.net.NoRouteToHostException
  - java.net.HttpRetryException
  - java.net.ConnectException
  - java.lang.SystemJ.setProperty
  - java.lang.SecurityManager.checkPropertiesAccess
  + BugFixes:
    - java.util.Properties.load() 
* VampireApi 0.9.1
  - renamed
  - build on .net core platform with nuget using 
  - javax.xml.crypto package
  - java.lang package extended
  + java.io.PrintStream
    - print(char)
    - println(char)
  + BugFixes:
    - JavaExtensions.getClass()
    - Runtime.getRuntime.exec()
* JavApi 0.8.0.1
  - platform depended classes extracted
  + BugFixes:
    - java.io.FileInputStream catching System.IO.DirectoryNotFoundException to throw java.io.IOException
    - biz.ritter.javapi.dotnet.nio.charset.CharsetDecoderImpl
* JavApi 0.8 (Target: Apache Common Pool, TinySQL)
  - API compatibility: java.lang.OutOfMemoryError
  - java.lang.ThreadDeath
  - java.lang.Thread.stop() / java.lang.Thread.interrupt()
  + java.io.File
      .mkdir()
      .canWrite()
  - java.io.FileReader
  - java.io.FileWriter
  + java.io.RandomAccessFile
      .readLine()
      .readByte()
      .write(byte)
      .write(char) 
      .writeByte(byte)
      .writeBytes(String) 
      .write(byte[])
  - java.sql.Types
  - java.sql.DriverManager
  - java.sql.SQLPermission