@@ -14,13 +14,13 @@
  *  Copyright © 2020 Sebastian Ritter
  */
 using System;
+using java = biz.ritter.javapi;
 
-namespace biz.ritter.javapi.lang.refj
-{
-    public sealed class Cleaner {
-        public interface Cleanable
-        {
-            void clean();
-        }
+namespace biz.ritter.javapi.io {
+
+    [AttributeUsage(AttributeTargets.Field | AttributeTargets.Method)]
+    public class Serial : System.Attribute{
+
     }
 }
+
