@@ -60,6 +60,77 @@ Take a look at solutions:
  * reimplementation like Java [EnumCollections](https://github.com/matteckert/EnumCollections) 
  * use [extension methods](https://weyprecht.de/2019/10/16/enums-in-csharp-and-java/)
     
+### Unsorted informations
+Keyword replacing:
+in ==> inJ
+out ==> outJ
+package => namespace
+package java.lang.ref => java.lang.refj
+import package.package.*; => package.package;
+extends ==> :
+implements ==> : or ,
+static block ==> static constructor
+boolean ==> bool
+final class ==> sealed class 
+final method ==> sealed method 
+final var ==> readonly var    or sometime const
+method throws signature ==> comment out or remove
+System class ==> SystemJ
+type name [] ==> type [] name
+namespace is a block not a statement
+add at beginning using System; and using java = biz.ritter.javapi;
+important: you need to using System for basic types like String
+namespace after using
+extends java.io.Serializable ==> : java.io.Serializable and (!!!) using System and [Serializable] for type and all(!) subtypes
+transient ==> using System and [NonSerializable]
+instanceof ==> is
+synchronized method ==> lock(this) - maybe [MethodImpl(MethodImplOptions.Synchronized)]
+synchronized block with type ==> replace with lock
+synchronized block ==> create readonly object and replace synchronized with lock (object)
+Variable name operator ==> operatorJ
+Variable name string ==> stringJ
+Variable name params ==> paramsJ
+Variable name object ==> objectJ
+array.length ==> array.Length
+java.util.Map<?,?>.Entry<?,?> ==> java.util.MapNS.Entry<Object,Object>
+base class constructor call super (xyz) is declared with : base (xyz)
+non final methods in non final class needed to be virtual
+methods are "final" by default, need to be virtual or abstract if not
+usings are on "package"-stage, never import a type with using
+if you override a method same visiblity are important
+if you override a method with return value, the visible of return type need to be same or more
+do not call variable name same as method name
+switch default need a break
+java.lang.Boolean.FALSE (false) != System.Boolean.FalseString - add a .ToLower()
+
+genric classes needed types 
+
+
+the class problems...
+return Class<?> ==> return Type
+MyClass.class ==> typeof(MyClass)
+from 
+
+   ```java
+   Class<?> refClass = refChildNode.getClass();
+   Class<?> testClass = testChildNode.getClass();
+   if (!refClass.equals(testClass)) {
+      
+   }
+   ```
+
+to
+
+   ```c#
+    Type refClass = refChildNode.GetType();
+    Type testClass = testChildNode.GetType();
+    if (!refClass.Equals(testClass)) 
+    {
+    }
+   ```
+   
+
+
 
     
 ## Development hacks
